--- a/tox.ini
+++ b/tox.ini
@@ -37,17 +37,22 @@ skip_install = True
 recreate = True
 deps =
     -r{toxinidir}/test_requirements.txt
+; a separate worker is required in ci due to https://foss.heptapod.net/pypy/pypy/-/issues/3317
+; this seems to cause tox to wait forever
+; remove this when pypy releases the bugfix
 commands =
     pip install -e .[d]
     coverage erase
     pytest tests --run-optional no_python2 \
         --run-optional no_jupyter \
         !ci: --numprocesses auto \
+        ci: --numprocesses 1 \
         --cov {posargs}
     pip install -e .[jupyter]
     pytest tests --run-optional jupyter \
         -m jupyter \
         !ci: --numprocesses auto \
+        ci: --numprocesses 1 \
         --cov --cov-append {posargs}
     coverage report
 
